Getting rid of extra "Explanation:" GPT put all over my markdown cells.

--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Interning\n",
-    "Explanation:\n",
+    "\n",
     "In Java, interning is a process where the JVM stores only one copy of each distinct immutable value, such as strings, integers, and characters. This is done to optimize memory usage and improve performance.\n",
     "\n",
     "In the code snippet, we demonstrate interning for strings, integers, and characters.\n",
@@ -22,7 +22,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "8f4fe5c1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +85,7 @@
    "metadata": {},
    "source": [
     "# Data Types\n",
-    "Explanation:\n",
+    "\n",
     "In this code snippet, we demonstrate the usage of different data types in Java. We declare and initialize variables of various data types such as `int`, `float`, `double`, `char`, `boolean`, and `String`. We then print the values of these variables using `System.out.println()` statements.\n",
     "\n",
     "After that, we update the values of the variables and print the updated values to demonstrate variable assignment and re-assignment.\n",
@@ -93,7 +97,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "b2fa1707",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -157,7 +165,7 @@
    "metadata": {},
    "source": [
     "# Different Integer Type Sizes\n",
-    "Explanation:\n",
+    "\n",
     "In Java, there are different integer types with varying sizes. The code snippet demonstrates the declaration and initialization of variables of different integer types (`byte`, `short`, `int`, and `long`) and their respective size ranges.\n",
     "\n",
     "The `byte` type is a signed 8-bit integer with a range from -128 to 127. The `short` type is a signed 16-bit integer with a range from -32,768 to 32,767. The `int` type is a signed 32-bit integer with a range from -2,147,483,648 to 2,147,483,647. The `long` type is a signed 64-bit integer with a range from -9,223,372,036,854,775,808 to 9,223,372,036,854,775,807.\n",
@@ -171,7 +179,11 @@
    "cell_type": "code",
    "execution_count": 51,
    "id": "02258eea",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -220,7 +232,7 @@
    "metadata": {},
    "source": [
     "# Different Floating Point Type Sizes\n",
-    "Explanation:\n",
+    "\n",
     "In Java, there are two floating-point types: `float` and `double`. The `float` type is a single-precision 32-bit floating-point number, while the `double` type is a double-precision 64-bit floating-point number.\n",
     "\n",
     "In the code snippet, we demonstrate the declaration and initialization of variables of both `float` and `double` types. We also show different ways to assign values to these variables, including using literals and casting.\n",
@@ -236,7 +248,11 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "c25f6c86",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -289,7 +305,7 @@
    "metadata": {},
    "source": [
     "# Constants/Final Variables\n",
-    "Explanation:\n",
+    "\n",
     "In Java, constants are declared using the `final` keyword. Once a variable is declared as a constant, its value cannot be changed throughout the program. Constants are often used to represent fixed values that should not be modified.\n",
     "\n",
     "In the code snippet, we demonstrate the usage of constants in Java. We declare a constant variable `MAX_VALUE` and initialize it with the value `100`. Attempting to modify the constant variable will result in a compilation error.\n",
@@ -305,7 +321,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "69cedd9f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -380,7 +400,7 @@
    "metadata": {},
    "source": [
     "# Statics\n",
-    "Explanation:\n",
+    "\n",
     "In Java, the `static` keyword is used to define variables, methods, and blocks that belong to the class itself rather than instances of the class. Here's a breakdown of the code snippet:\n",
     "\n",
     "1. The class `StaticsDemo` is declared.\n",
@@ -400,7 +420,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f7f3ff05",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -450,7 +474,7 @@
    "metadata": {},
    "source": [
     "# Enums (inc. numeric, string, and strongly-typed)\n",
-    "Explanation:\n",
+    "\n",
     "This code snippet demonstrates the usage of enums in Java. Enums are used to represent a fixed set of values. In this example, we have four enum types: `BasicEnum`, `Size`, `Day`, and `Color`.\n",
     "\n",
     "The `BasicEnum` enum demonstrates the most minimal enum where you just have some possible values with ordinals by position.\n",
@@ -468,7 +492,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "cb954704",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -646,7 +674,7 @@
    "metadata": {},
    "source": [
     "# Nullability\n",
-    "Explanation:\n",
+    "\n",
     "In Java, nullability refers to whether a variable can hold a null value or not. By default, variables in Java can hold null values, making them nullable. However, it is also possible to declare variables as non-nullable using the `@NonNull` annotation or by using a third-party library like `@Nullable` or `@NotNull`.\n",
     "\n",
     "In the code snippet, we demonstrate the concept of nullability in Java. We declare a nullable variable `nullableString` and a non-nullable variable `nonNullableString`. We then demonstrate various operations on these variables, such as assigning values, checking for null, and using them in method calls.\n",
@@ -660,7 +688,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "ac3fec59",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -738,7 +770,7 @@
    "metadata": {},
    "source": [
     "# NaN, Infinity, etc.\n",
-    "Explanation:\n",
+    "\n",
     "In Java, the `NaN` (Not-a-Number) and `Infinity` are special values that can be assigned to variables of type `double` or `float`. \n",
     "\n",
     "- `NaN` represents an undefined or unrepresentable value resulting from an operation, such as dividing zero by zero or taking the square root of a negative number.\n",
@@ -755,7 +787,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "03378ac8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -817,7 +853,7 @@
    "metadata": {},
    "source": [
     "# References and Mutability\n",
-    "Explanation:\n",
+    "\n",
     "In Java, variables can hold either primitive types (such as `int`, `double`, `boolean`, etc.) or reference types (such as `String`, `StringBuilder`, custom classes, etc.). \n",
     "\n",
     "- Primitive variables store the actual value, while reference variables store the memory address of an object.\n",
@@ -841,7 +877,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "aa4fb670",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -907,7 +947,7 @@
    "metadata": {},
    "source": [
     "# Type Inference\n",
-    "Explanation:\n",
+    "\n",
     "In Java, type inference allows the compiler to automatically determine the type of a variable based on its initializer expression. This reduces the need for explicit type declarations, making the code more concise and readable.\n",
     "\n",
     "In the code snippet, we demonstrate type inference in various scenarios. \n",
@@ -927,7 +967,11 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "f1d2a421",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -996,7 +1040,7 @@
    "metadata": {},
    "source": [
     "# Equality (all ways)\n",
-    "Explanation:\n",
+    "\n",
     "In Java, there are multiple ways to check for equality between variables. This code snippet demonstrates four different approaches:\n",
     "\n",
     "1. Equality using the `==` operator: This operator checks if two variables refer to the same memory location or the same primitive value. It is used for primitive types and object references. In the example, `a == b` returns `false` because `a` and `b` have different values, while `a == c` returns `true` because `a` and `c` have the same value. For strings, `str1 == str2` returns `true` because both variables refer to the same string literal, while `str1 == str3` returns `false` because `str3` is a new string object created using the `new` keyword.\n",
@@ -1033,7 +1077,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "b9a17442",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1106,7 +1154,7 @@
    "metadata": {},
    "source": [
     "# Casting & Coercion\n",
-    "Explanation:\n",
+    "\n",
     "In Java, casting refers to the process of converting a value from one data type to another. Casting can be either implicit or explicit.\n",
     "\n",
     "- Implicit Casting (Widening Conversion): It occurs when the target type has a larger range than the source type. In the code snippet, an integer value `num1` is implicitly cast to a double value `num2` by assigning `num1` to `num2`. The output demonstrates that the integer value is successfully cast to a double.\n",
@@ -1126,7 +1174,11 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "9ededa28",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1182,7 +1234,7 @@
    "metadata": {},
    "source": [
     "# Type Alias/Typedef\n",
-    "Explanation:\n",
+    "\n",
     "In Java, type aliasing is _not directly supported_ like in some other programming languages."
    ]
   },
@@ -1192,7 +1244,7 @@
    "metadata": {},
    "source": [
     "# Type Union\n",
-    "Explanation:\n",
+    "\n",
     "In Java, type unions is _not directly supported_ like in some other programming languages."
    ]
   },
@@ -1202,7 +1254,7 @@
    "metadata": {},
    "source": [
     "# Variable Lifetime inc. Caveats\n",
-    "Explanation:\n",
+    "\n",
     "In Java, variables have a specific lifetime, which is the duration for which they exist and hold their values. The lifetime of a variable depends on its scope, which is determined by where the variable is declared.\n",
     "\n",
     "In the code snippet, we demonstrate the lifetime of variables in different scopes:\n",
@@ -1225,7 +1277,11 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "6e7f52ef",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1302,7 +1358,7 @@
    "metadata": {},
    "source": [
     "# Scope and Visibility\n",
-    "Explanation:\n",
+    "\n",
     "In this code snippet, we demonstrate the scope and visibility of variables in Java.\n",
     "\n",
     "- We have a global variable `globalVariable` declared at the class level, which can be accessed by any method within the class.\n",
@@ -1330,7 +1386,11 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "ad789402",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1400,7 +1460,7 @@
    "metadata": {},
    "source": [
     "# Local, Instance, and Class Variables\n",
-    "Explanation:\n",
+    "\n",
     "- In this code snippet, we demonstrate the usage of local, instance, and class variables in Java.\n",
     "- Class variables are declared using the `static` keyword and are shared among all instances of the class.\n",
     "- Instance variables are declared without the `static` keyword and each instance of the class has its own copy of these variables.\n",
@@ -1425,7 +1485,11 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "23634038",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1493,7 +1557,7 @@
    "metadata": {},
    "source": [
     "# Pointers, References, Smart Pointers, Memory Management\n",
-    "Explanation:\n",
+    "\n",
     "- Pointers: In Java, pointers are not explicitly used like in languages such as C or C++. Instead, Java uses references to objects.\n",
     "- References: Java uses references to objects. When an object is assigned to a variable, the variable holds a reference to the object in memory. Changes made to the object through one reference are reflected in all other references to the same object.\n",
     "- Smart Pointers: Java does not have explicit smart pointers like C++. Instead, Java relies on automatic garbage collection to manage memory. Objects that are no longer referenced are automatically garbage collected.\n",
@@ -1508,7 +1572,7 @@
    "metadata": {},
    "source": [
     "# Garbage Collection, Memory Leaks\n",
-    "Explanation:\n",
+    "\n",
     "In this code snippet, we demonstrate the concept of garbage collection and memory leaks in Java. \n",
     "\n",
     "1. We create two objects of the `MyClass` class, `obj1` and `obj2`, and print their references.\n",
@@ -1526,7 +1590,11 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "2f7c02c2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1599,7 +1667,7 @@
    "metadata": {},
    "source": [
     "# Move, Copy, and Clone Semantics\n",
-    "Explanation:\n",
+    "\n",
     "In Java, variables can be moved, copied, or cloned depending on the semantics required.\n",
     "\n",
     "1. Move Semantics:\n",
@@ -1621,7 +1689,11 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "a8e2aa21",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1707,7 +1779,7 @@
    "metadata": {},
    "source": [
     "# Float Equality (approximate)\n",
-    "Explanation:\n",
+    "\n",
     "In Java, comparing floating-point numbers for equality can be tricky due to the way they are represented in memory. Floating-point numbers are stored as binary fractions, and some decimal numbers cannot be represented exactly in binary. This can lead to unexpected results when comparing floats or doubles using the `==` operator.\n",
     "\n",
     "In the code snippet, we demonstrate two scenarios: comparing floats and comparing doubles for equality.\n",
@@ -1723,7 +1795,11 @@
    "cell_type": "code",
    "execution_count": 50,
    "id": "16d106fb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1780,7 +1856,7 @@
    "metadata": {},
    "source": [
     "# Uninitialized/Default Values (inc. local, global, instance, and static contexts)\n",
-    "Explanation:\n",
+    "\n",
     "In Java, variables can be declared without being explicitly initialized. When a variable is not initialized, it is assigned a default value based on its type. The default values are as follows:\n",
     "\n",
     "- `int`: 0\n",
@@ -1805,7 +1881,11 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "c1d68f72",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1861,7 +1941,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70acd2f8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": []
   }
