Adding note about unsigned integers.

--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -161,6 +161,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db180229",
+   "metadata": {},
+   "source": [
+    "# Signed vs. Unsigned\n",
+    "\n",
+    "Java __has no concept__ of unsigned numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39d93b73",
    "metadata": {},
    "source": [
